# snake-game

./: Cargo.toml  LICENSE  README.md
src/: alert.rs  bottom_bar.rs  direction.rs  draw_utils.rs  food.rs  game.rs  game_button.rs  main.rs  map.rs  maps.rs  point.rs  resources.rs  snake.rs  snake_config.rs  state.rs  utils.rs  wall.rs
